# osm-live-updates

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: docker-publish.yaml
apps/: CMakeLists.txt  osm-live-updates.cpp
benchmarks/: CMakeLists.txt
benchmarks/osm/: Osm2ttl.cpp  OsmChangeHandler.cpp  OsmDataFetcher.cpp  OsmObjectHelper.cpp
benchmarks/sparql/: QueryWriter.cpp  SparqlWrapper.cpp
benchmarks/util/: TtlHelper.cpp  URLHelper.cpp  XmlHelper.cpp  XmlReader.cpp
include/config/: Config.h  Constants.h  ExitCode.h  Stats.h
include/osm/: ChangeAction.h  Node.h  NodeHandler.h  Osm2Rdf.h  Osm2ttl.h  OsmChangeHandler.h  OsmChangeHandlerException.h  OsmDataFetcher.h  OsmDataFetcherQLever.h  OsmDataFetcherSparql.h  OsmDatabaseState.h  OsmDiffGranularities.h  OsmFileHelper.h  OsmObject.h  OsmObjectHelper.h  OsmObjectType.h  OsmReplicationServerHelper.h  OsmUpdater.h  ReferencesHandler.h  Relation.h  RelationHandler.h  RelationMember.h  StatisticsHandler.h  Way.h  WayHandler.h  WktHelper.h
include/osm-live-updates/: OsmDataFetcher.h
include/osm-live-updates/config/: Constants.h
include/osm-live-updates/sparql/: QueryWriter.h
include/osm-live-updates/util/: HttpClient.h  URLHelper.h
include/sparql/: QueryWriter.h  QueryWriterException.h  SparqlWrapper.h
include/ttl/: Triple.h
include/util/: BatchHelper.h  CacheFile.h  Decompressor.h  Exceptions.h  HttpMethod.h  HttpRequest.h  Logger.h  OsmObjectHelper.h  Time.h  TtlHelper.h  Types.h  URLHelper.h  WktHelper.h  XmlHelper.h  XmlReader.h  XmlWriter.h
src/: CMakeLists.txt
src/config/: Config.cpp
src/osm/: Node.cpp  NodeHandler.cpp  Osm2Rdf.cpp  Osm2ttl.cpp  OsmChangeHandler.cpp  OsmDataFetcher.cpp  OsmDataFetcherQLever.cpp  OsmDataFetcherSparql.cpp  OsmObjectHelper.cpp  OsmReplicationServerHelper.cpp  OsmUpdater.cpp  ReferencesHandler.cpp  Relation.cpp  RelationHandler.cpp  RelationMember.cpp  StatisticsHandler.cpp  Way.cpp  WayHandler.cpp  WktHelper.cpp
src/osm-live-updates/: OsmDataFetcher.cpp
src/sparql/: QueryWriter.cpp  SparqlWrapper.cpp
src/util/: CacheFile.cpp  Decompressor.cpp  HttpClient.cpp  HttpRequest.cpp  Logger.cpp  OsmObjectHelper.cpp  TtlHelper.cpp  URLHelper.cpp  WktHelper.cpp  XmlHelper.cpp  XmlReader.cpp  XmlWriter.cpp
tests/: CMakeLists.txt
tests/data/: 159.osc  427.osc  delete_node.osc  empty_node.osm  empty_node_with_added_tag.osm  insert_node.osc  modify_node.osc  node.osm  node.ttl  node.ttl.bz2  relation.osm  relation.ttl  relation_large.osm  test.osc  way.ttl  wayWithReferences.osm
tests/osm/: Node.cpp  Osm2ttl.cpp  OsmDataFetcher.cpp  Relation.cpp  Way.cpp  WktHelper.cpp
tests/osm-live-updates/: OsmDataFetcher.cpp
tests/sparql/: QueryWriter.cpp  SparqlWrapper.cpp
tests/util/: CacheFile.cpp  Decompressor.cpp  OsmObjectHelper.cpp  TtlHelper.cpp  URLHelper.cpp  WktHelper.cpp  XmlHelper.cpp  XmlReader.cpp  XmlWriter.cpp
